--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body onload="init()">
+    <h1>Tic Tac Toe</h1>
+
+    <div id="content"></div>
+
+    <div class="center mt-32">
+        <button onclick="restartGame()">Spiel neu starten</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
