--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="init()">
-    <h1>Tic Tac Toe</h1>
+    <h1>Tic Tac Toe Game</h1>
 
     <div id="content"></div>
 
